--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import "./layout/three_columns/three_columns";
 @import "./layout/simple_steps/simple_steps";
 @import "./layout/about_us/about_us";
+@import "./layout/contact/contact";
 
 
 
