--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "./layout/simple_steps/simple_steps";
 @import "./layout/about_us/about_us";
 @import "./layout/contact/contact";
+@import "./layout/help/help";
 
 
 
