--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,10 @@
 @import "./layout/about_us/about_us";
 @import "./layout/contact/contact";
 @import "./layout/help/help";
-
+@import "./layout/login/login";
+@import "./layout/give_things/give_things";
+@import "./layout/give_header/give_header";
+@import "./layout/logout/logout";
 
 
 body {
