--- a/src/scss/layout/help/help.scss
+++ b/src/scss/layout/help/help.scss
@@ -4,41 +4,67 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.content_wrapper {
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    .help_description {
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }    
-    .help_content {
-        width: 100%;
-            .element_wrapper_column {
-              padding-top: 20px;
-              padding-bottom: 20px;
-            }
-            .element_wrapper_row {
-                width: 100%;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
-    }
-    .help_pagination {
+    .content_wrapper {
+        width: 70%;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
+    
+        > p {
+            font-size: 30px;
+            text-align: center;
+        }
+    
+        img {
+            margin: 30px 0 20px 0;
+        }
+        .help_description {
+            margin-top: 30px;
+            margin-bottom: 30px;
+        }    
+        .help_content {
+            width: 100%;
+                .element_wrapper_column {
+                  padding-top: 20px;
+                  padding-bottom: 20px;
+                }
+                .element_wrapper_row {
+                    width: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                }
+        }
+        .help_pagination {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            ul li {
+                padding: 10px;
+                margin-left: 10px;
+                display: inline-block;
+                border: 1px solid transparent;
+                color: black;
+                &:hover {
+                    border: 1px solid black;
+                    color: #666;
+                  }
+                &:visited {
+                    border: 1px solid black; 
+                }
+            }
+        }
+            
+        
     }
 }
+
+
 
 .help_nav {
     margin-bottom: 10px;
-    text-align: right;
+    text-align: center;
     ul li {
         padding: 10px;
         margin-left: 10px;
