--- a/src/scss/layout/simple_steps/simple_steps.scss
+++ b/src/scss/layout/simple_steps/simple_steps.scss
@@ -1,19 +1,25 @@
 #simple_steps {
     width: 100%;
-    height: 660px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-}
-
-#simple_steps > p {
+    .description {
+        padding: 50px 0px 50px 0px;
         font-size: 28px;
+        text-align: center;
+        img {
+            margin: 20px 0 0 0;
+        }
+    }
+
+    .buttons_container {
+        padding: 30px;
+    }
 }
 
 .steps {
     width: 100%;
-    height: 325px;
     background-color: $whitish_color;
     ul {
         height: 100%;
@@ -21,8 +27,8 @@
         align-items: center;
         justify-content: space-evenly;
         li {
-            width: 150px;
             display: flex;
+            padding: 50px;
             flex-direction: column;
             align-items: center;
             justify-content: space-evenly;
@@ -36,4 +42,13 @@
             }
         }
     }
+}
+
+
+@media (max-width: 1000px) {
+
+    .steps ul {
+        flex-direction: column;
+    }
+
 }
