--- a/src/scss/layout/header/header.scss
+++ b/src/scss/layout/header/header.scss
@@ -1,12 +1,3 @@
-#header {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-evenly;
-}
-
 #header:before {
     content: ' ';
     display: block;
@@ -24,163 +15,83 @@
     background-size: contain;
 }
 
-
-.header_nav, .user_nav {
-    margin-bottom: 10px;
-    ul li {
-        padding: 10px;
-        margin-left: 10px;
-        display: inline-block;
-        border: 1px solid transparent;
-        a {
-            text-decoration: none;
-            color: black;
-        }
-        &:hover {
-          color: #666;
-          border: 1px solid black;
-        }
-    }
-}
-
-.main_section { 
+#header {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: start;
-    padding: 70px 0;
+    justify-content: space-evenly;
 
-    .content {
+
+    .main_section { 
+        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
+        align-items: flex-end;
+        justify-content: center;
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: calc(25px - 0.5vw);
+            margin: 0 50px 0 50px;
+            background-color: white;
+            border: 1px solid black;
+            text-align: center;
+            p {
+                font-size: calc(15px + 1vw);
+                margin: 10px 0px;
+            }
+            img {
+                padding-top:25px;
+            }
+        }
+    }
+
+    .buttons_container {
+        display: flex;
         align-items: center;
         justify-content: center;
-        padding: calc(25px - 0.5vw);
-        margin: 0 50px 0 50px;
-        background-color: white;
-        border: 1px solid black;
-        text-align: center;
-        p {
-            font-size: calc(15px + 1vw);
-            margin: 10px 0px;
+        padding: 15px;
+        button {
+            width: 200px;
+            font-size: 25px;
+            margin-left: 20px;
+            background-color: white;
+            padding: 20px;
+            border: 1px solid black;
+            a {
+                color:black;
+                text-decoration: none;
+            }
         }
-        img {
-            padding-top:25px;
+        button:first-child {
+            margin-left: 0px;
         }
-    }
-
-}
-
-
-.buttons_container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 15px;
-    button {
-        width: 200px;
-        font-size: 25px;
-        margin-left: 20px;
-        background-color: white;
-        padding: 20px;
-        border: 1px solid black;
-        a {
-            color:black;
-            text-decoration: none;
+        button:hover {
+            background-color: $yellowish_color;
         }
     }
-    button:first-child {
-        margin-left: 0px;
-    }
-    button:hover {
-        background-color: $yellowish_color;
-    }
-}
 
-
-.desktop_menu {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-start;
-    padding: 50px 50px;
-}
-
-
-.hamburgerButton {
-    width: calc(20px + 2vw);
-    display: none
-}
-
-.iksButton {
-    width: calc(20px + 2vw);
-    display: none;
-}
-
-.mobile_menu { 
-    display: none;
 }
 
 @media only screen and (max-width: 900px) {
-    .hamburgerButton {
-        width: calc(20px + 2vw);
-        display: block;
-    }
 
-    .iksButton {
-        display: block;
-        position: absolute;
-        right: 50px;
-        top: 50px;
-        width: calc(20px + 2vw);
-    }
-
-    .mobile_menu { 
-        display: flex;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background: white;
-        padding: 100px 0;
-        box-sizing: border-box;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .desktop_menu .header_nav, .desktop_menu .user_nav  {display: none;}
-
-    .mobile_menu .header_nav ul {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
-    .mobile_menu .user_nav ul {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .main_section .buttons_container {
+    #header .main_section .buttons_container {
         flex-direction: column;
         button {
             margin: 10px;
         }
-
-    }
-    //Action class
-
-    .hidden {
-        display: none;
     }
 }
 
 @media only screen and (max-width: 1400px) {
 
-    #header:before {
+    #header:before, #give_header:before {
 
         background-position: -600px;
         -ms-background-size: cover;
@@ -190,7 +101,7 @@
         background-size: cover;
     }
 
-    .main_section { 
+    #header .main_section, #give_header .main_section{ 
         align-items: center;
     }
 }
