--- a/src/scss/layout/contact/contact.scss
+++ b/src/scss/layout/contact/contact.scss
@@ -5,6 +5,8 @@
     flex-flow: row wrap;
     align-items: center;
     justify-content: flex-end;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
 #contact:before {
