--- a/src/scss/layout/give/give.scss
+++ b/src/scss/layout/give/give.scss
@@ -140,6 +140,10 @@
             margin: 30px 0;
         }
 
+        strong {
+            font-size: calc(20px + 2vw);
+        }
+
         form, .summary {
             display: flex;
             flex-direction: column;
@@ -163,12 +167,12 @@
                 margin: 20px 0 20px 0;
             }
             label {
-                font-size: 25px;
+                font-size:calc(10px + 1vw);
                 font-weight: lighter;
-                margin: 30px 0;
+                margin: 30px 0;     
             }
             input[name=organizationSpecific] {
-                width: 550px;
+                width: 90%;
                 padding: 10px;
                 font-size: 22px;
                 background-color: transparent;
@@ -205,7 +209,7 @@
                     width: 50px;
                     height: 50px;
                 }
-                :nth-child(2) {
+                > :nth-child(2) {
                     margin-left: 30px;
                 }
                 .title {
@@ -214,9 +218,15 @@
                 }
                 input {
                     padding: 10px;
+                    width: 100%;
                     font-size: 22px;
                     background-color: transparent;
                     border: .75px solid black;
+                    box-sizing: border-box;
+                }
+                .error {
+                    color: red;
+                    font-size:calc(10px + 1vw);
                 }
             }
         }
@@ -242,6 +252,11 @@
 } 
 
 @media only screen and (max-width: 600px) {
+
+    #master_form {
+        height: 100%;
+    }
+
     #master_form .column form .form_container, #master_form .column .summary .form_container {
         display: flex;
         flex-direction: column;
@@ -266,16 +281,26 @@
         }
     }
     #master_form .yellow_header {
-        padding: 10px;
+        padding: 20px;
     }
     #master_form .column {
-        padding: 10px;
+        padding: 20px;
     }
     #master_form .column .summary {
         width: 100%;
     }
     #master_form .column .thanks {
-            align-self: center;
-            width: 100%;
+        align-self: center;
+        width: 100%;
+        padding: 200px 0 200px 0;
     }
+
+    #master_form .column form select {
+        margin: 40px 0 40px 0;
+
+    }
+    input[name=organizationSpecific] {
+        margin: 40px 0 40px 0;
+    }
+    
 }
