--- a/src/scss/layout/help/help.scss
+++ b/src/scss/layout/help/help.scss
@@ -20,26 +20,40 @@
             margin: 30px 0 20px 0;
         }
         .help_description {
+            width: 60%;
             margin-top: 30px;
             margin-bottom: 30px;
+            text-align: center;
         }    
         .help_content {
             width: 100%;
-                .element_wrapper_column {
-                  padding-top: 20px;
-                  padding-bottom: 20px;
-                }
                 .element_wrapper_row {
                     width: 100%;
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
+                    border-bottom: 1px solid black;
+                    padding: 20px 0 20px 0;
+                    .left {
+                        font-family: $merriweather;
+                        font-weight: lighter;
+                    }
+                    .left span:first-of-type  {
+                        font-size: calc(20px + 1vw);;
+                    }
+                    .left span:last-of-type  {
+                        font-style: italic;
+                    }
+                    .right {
+                        text-align: right;
+                    }
                 }
         }
         .help_pagination {
             display: flex;
             align-items: center;
             justify-content: center;
+            padding: 10px 0 10px 0;
             ul li {
                 padding: 10px;
                 margin-left: 10px;
@@ -90,4 +104,16 @@
     color: blue;
     user-select: none;
     cursor: pointer;
+  }
+  @media only screen and (max-width: 600px) {
+    #help {
+        height: 100%;
+        padding: 40px 0 40px 0;
+     }
+  }
+
+  @media only screen and (max-width: 900px) {
+    #help .content_wrapper .help_description {
+        width: 100%;
+     }
   }
